--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ function myFunction() {
   navigator.clipboard.writeText(copyText.value);
 console.log(copyText.value)
 }
+myFunction()
 </script>
 
 </body>
